# qttools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.dev.md  README.md  environment-dev.yml  environment.yml  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.cscs/workflows/: tests_gpu.yaml
.github/workflows/: docs.yaml  tests.yaml
docs/: index.md
docs/getting_started/: installation.md
docs/guides/: contributor_guide.md  index.md  user_guide.md
docs/scripts/: generate_api_reference.py
docs/stylesheets/: custom.css  mkdocstrings.css  qttools.css
docs/user/: index.md
sandbox/: dbcsr.py  dbcsr_test.py  mpi_subarray.py  mpi_test.py  mpi_test_naive.py  mpi_test_remainder.py
src/qttools/: __about__.py  __init__.py
src/qttools/comm/: __init__.py  comm.py  utils.py
src/qttools/cuDSS_binding/: ccuDSS.cpp  ccuDSS.pyx  setup.py
src/qttools/datastructures/: __init__.py  coogroup.py  dbcsr.py  dbsparse.py  dsbanded.py  dsbcoo.py  dsbcsr.py  dsbsparse.py  dsdbcoo.py  dsdbcsr.py  dsdbsparse.py  mp_routines.py  realspace_operator.py  routines.py  sbcoo.py
src/qttools/greens_function/: inv.py  rgf.py  solver.py
src/qttools/greens_function_solver/: __init__.py  _serinv.py  inv.py  more_rgf.py  morergf.py  rgf.py  rgf_dist.py  solver.py
src/qttools/kernels/: __init__.py  eig.py  eigvalsh.py  gemmEx.py  operator.py  qr.py  svd.py
src/qttools/lyapunov/: __init__.py  doubling.py  lyapunov.py  spectral.py  utils.py  vectorize.py
src/qttools/nevp/: __init__.py  beyn.py  full.py  nevp.py  utils.py
src/qttools/obc/: __init__.py  full.py  obc.py  sancho_rubio.py  spectral.py
src/qttools/profiling/: __init__.py  profiler.py  utils.py
src/qttools/utils/: cpu.py  gpu.py  gpu_utils.py  input_utils.py  mpi_utils.py  profiling.py  solvers_utils.py  sparse_utils.py  stack_utils.py
src/quantum_transport_toolbox/: __init__.py
src/quantum_transport_toolbox/open_boundary_conditions_solvers/: __init__.py
src/quantumtransporttoolbox/: __about__.py  __init__.py
src/quantumtransporttoolbox/greens_functions_solvers/: rgf.py
src/quantumtransporttoolbox/open_boundary_conditions_solvers/: __init__.py  sancho_rubio.py
tests/: conftest.py
tests/comm/: conftest.py  test_comm.py
tests/datastructures/: conftest.py  test_dbsparse.py  test_dsbanded.py  test_dsbsparse.py  test_dsdbsparse.py  test_dsdbsparse_dist.py  test_mp_routines.py  test_routines.py
tests/datastructures/dbsparse/: conftest.py  test_access.py  test_conversion.py  test_creation.py  test_distribution.py  test_to_dense.py
tests/greens_function_solver/: conftest.py  test_selected_inv.py  test_selected_solve.py
tests/kernels/: conftest.py  test_dsbcoo.py  test_dsbcsr.py  test_dsbsparse.py  test_eig.py  test_eigvalsh.py  test_gemmEx.py  test_operator.py  test_qr.py  test_svd.py
tests/kernels/datastructure/: test_dsbcoo.py  test_dsbcsr.py  test_dsbsparse.py  test_dsdbcoo.py  test_dsdbcsr.py  test_dsdbsparse.py
tests/kernels/linalg/: test_eig.py  test_eigvalsh.py  test_qr.py  test_svd.py
tests/lyapunov/: conftest.py  test_lyapunov.py
tests/nevp/: conftest.py  test_nevp.py
tests/obc/: conftest.py  test_full.py  test_sancho_rubio.py  test_spectral.py
tests/open_boundary_conditions_solvers_tests/: conftest.py  sancho_rubio_test.py  test_sancho_rubio.py
tests/profiling/: test_profiling.py
tests/rgf_dist/: test_rgf_dist.py
tests/utils/: conftest.py  test_gpu_utils.py  test_input_utils.py  test_mpi_utils.py  test_sparse_utils.py  test_sparse_utils_dist.py
(+33 files in other folders)
